worked on connections

--- a/l3/ece453_top_level_summary.html
+++ b/l3/ece453_top_level_summary.html
@@ -7,7 +7,7 @@
 <TD BGCOLOR='#FFFF99'><B>Project File:</B></TD>
 <TD>lab2.xise</TD>
 <TD BGCOLOR='#FFFF99'><b>Parser Errors:</b></TD>
-<TD ALIGN=LEFT><font color='red'; face='Arial'><b>X </b></font><A HREF_DISABLED='C:/vmware-shared/sandbox/ece453/l3\_xmsgs/pn_parser.xmsgs?&DataKey=Error'>1 Error</A></TD>
+<TD> No Errors </TD>
 </TR>
 <TR ALIGN=LEFT>
 <TD BGCOLOR='#FFFF99'><B>Module Name:</B></TD>
@@ -171,5 +171,5 @@ System Settings</A>
 </TABLE>
 
 
-<br><center><b>Date Generated:</b> 02/06/2012 - 15:06:25</center>
+<br><center><b>Date Generated:</b> 02/06/2012 - 15:56:53</center>
 </BODY></HTML>
