--- a/l3/ece453_top_level_summary.html
+++ b/l3/ece453_top_level_summary.html
@@ -2,7 +2,7 @@
 <BODY TEXT='#000000' BGCOLOR='#FFFFFF' LINK='#0000EE' VLINK='#551A8B' ALINK='#FF0000'>
 <TABLE BORDER CELLSPACING=0 CELLPADDING=3 WIDTH='100%'>
 <TR ALIGN=CENTER BGCOLOR='#99CCFF'>
-<TD ALIGN=CENTER COLSPAN='4'><B>ece453_top_level Project Status</B></TD></TR>
+<TD ALIGN=CENTER COLSPAN='4'><B>ece453_top_level Project Status (02/06/2012 - 17:00:01)</B></TD></TR>
 <TR ALIGN=LEFT>
 <TD BGCOLOR='#FFFF99'><B>Project File:</B></TD>
 <TD>lab2.xise</TD>
@@ -25,7 +25,7 @@ No Errors</TD>
 <TR ALIGN=LEFT>
 <TD BGCOLOR='#FFFF99'><B>Product Version:</B></TD><TD>ISE 12.4</TD>
 <TD BGCOLOR='#FFFF99'><UL><LI><B>Warnings:</B></LI></UL></TD>
-<TD ALIGN=LEFT><A HREF_DISABLED='C:/vmware-shared/sandbox/ece453/l3\_xmsgs/*.xmsgs?&DataKey=Warning'>413 Warnings (8 new, 0 filtered)</A></TD>
+<TD ALIGN=LEFT><A HREF_DISABLED='C:/vmware-shared/sandbox/ece453/l3\_xmsgs/*.xmsgs?&DataKey=Warning'>408 Warnings (0 new, 0 filtered)</A></TD>
 </TR>
 <TR ALIGN=LEFT>
 <TD BGCOLOR='#FFFF99'><B>Design Goal:</B></dif></TD>
@@ -59,49 +59,55 @@ System Settings</A>
 <TD ALIGN=LEFT><B>Logic Utilization</B></TD><TD><B>Used</B></TD><TD><B>Available</B></TD><TD><B>Utilization</B></TD><TD COLSPAN='2'><B>Note(s)</B></TD>
 </TR>
 <TR ALIGN=RIGHT><TD ALIGN=LEFT>Number of Slice Flip Flops</TD>
-<TD ALIGN=RIGHT>248</TD>
+<TD ALIGN=RIGHT>437</TD>
 <TD ALIGN=RIGHT>26,624</TD>
 <TD ALIGN=RIGHT>1%</TD>
 <TD COLSPAN='2'>&nbsp;</TD>
 </TR>
 <TR ALIGN=RIGHT><TD ALIGN=LEFT>Number of 4 input LUTs</TD>
-<TD ALIGN=RIGHT>506</TD>
+<TD ALIGN=RIGHT>1,141</TD>
 <TD ALIGN=RIGHT>26,624</TD>
-<TD ALIGN=RIGHT>1%</TD>
+<TD ALIGN=RIGHT>4%</TD>
 <TD COLSPAN='2'>&nbsp;</TD>
 </TR>
 <TR ALIGN=RIGHT><TD ALIGN=LEFT>Number of occupied Slices</TD>
-<TD ALIGN=RIGHT>270</TD>
+<TD ALIGN=RIGHT>738</TD>
 <TD ALIGN=RIGHT>13,312</TD>
-<TD ALIGN=RIGHT>2%</TD>
+<TD ALIGN=RIGHT>5%</TD>
 <TD COLSPAN='2'>&nbsp;</TD>
 </TR>
 <TR ALIGN=RIGHT><TD ALIGN=LEFT>&nbsp;&nbsp;&nbsp;&nbsp;Number of Slices containing only related logic</TD>
-<TD ALIGN=RIGHT>270</TD>
-<TD ALIGN=RIGHT>270</TD>
+<TD ALIGN=RIGHT>738</TD>
+<TD ALIGN=RIGHT>738</TD>
 <TD ALIGN=RIGHT>100%</TD>
 <TD COLSPAN='2'>&nbsp;</TD>
 </TR>
 <TR ALIGN=RIGHT><TD ALIGN=LEFT>&nbsp;&nbsp;&nbsp;&nbsp;Number of Slices containing unrelated logic</TD>
 <TD ALIGN=RIGHT>0</TD>
-<TD ALIGN=RIGHT>270</TD>
+<TD ALIGN=RIGHT>738</TD>
 <TD ALIGN=RIGHT>0%</TD>
 <TD COLSPAN='2'>&nbsp;</TD>
 </TR>
 <TR ALIGN=RIGHT><TD ALIGN=LEFT>Total Number of 4 input LUTs</TD>
-<TD ALIGN=RIGHT>536</TD>
+<TD ALIGN=RIGHT>1,171</TD>
 <TD ALIGN=RIGHT>26,624</TD>
-<TD ALIGN=RIGHT>2%</TD>
+<TD ALIGN=RIGHT>4%</TD>
 <TD COLSPAN='2'>&nbsp;</TD>
 </TR>
 <TR ALIGN=RIGHT><TD ALIGN=LEFT>&nbsp;&nbsp;&nbsp;&nbsp;Number used as logic</TD>
-<TD ALIGN=RIGHT>506</TD>
+<TD ALIGN=RIGHT>1,078</TD>
 <TD>&nbsp;</TD>
 <TD>&nbsp;</TD>
 <TD COLSPAN='2'>&nbsp;</TD>
 </TR>
 <TR ALIGN=RIGHT><TD ALIGN=LEFT>&nbsp;&nbsp;&nbsp;&nbsp;Number used as a route-thru</TD>
 <TD ALIGN=RIGHT>30</TD>
+<TD>&nbsp;</TD>
+<TD>&nbsp;</TD>
+<TD COLSPAN='2'>&nbsp;</TD>
+</TR>
+<TR ALIGN=RIGHT><TD ALIGN=LEFT>&nbsp;&nbsp;&nbsp;&nbsp;Number used as Shift registers</TD>
+<TD ALIGN=RIGHT>63</TD>
 <TD>&nbsp;</TD>
 <TD>&nbsp;</TD>
 <TD COLSPAN='2'>&nbsp;</TD>
@@ -113,13 +119,13 @@ System Settings</A>
 <TD COLSPAN='2'>&nbsp;</TD>
 </TR>
 <TR ALIGN=RIGHT><TD ALIGN=LEFT>Number of BUFGMUXs</TD>
-<TD ALIGN=RIGHT>3</TD>
+<TD ALIGN=RIGHT>1</TD>
 <TD ALIGN=RIGHT>8</TD>
-<TD ALIGN=RIGHT>37%</TD>
+<TD ALIGN=RIGHT>12%</TD>
 <TD COLSPAN='2'>&nbsp;</TD>
 </TR>
 <TR ALIGN=RIGHT><TD ALIGN=LEFT>Average Fanout of Non-Clock Nets</TD>
-<TD ALIGN=RIGHT>3.64</TD>
+<TD ALIGN=RIGHT>3.28</TD>
 <TD>&nbsp;</TD>
 <TD>&nbsp;</TD>
 <TD COLSPAN='2'>&nbsp;</TD>
@@ -155,21 +161,21 @@ System Settings</A>
 <TR ALIGN=CENTER BGCOLOR='#99CCFF'><TD ALIGN=CENTER COLSPAN='6'><B>Detailed Reports</B></TD><TD ALIGN=RIGHT WIDTH='10%'COLSPAN=1> <A HREF_DISABLED="?&ExpandedTable=DetailedReports"><B>[-]</B></a></TD></TR>
 <TR BGCOLOR='#FFFF99'><TD><B>Report Name</B></TD><TD><B>Status</B></TD><TD><B>Generated</B></TD>
 <TD ALIGN=LEFT><B>Errors</B></TD><TD ALIGN=LEFT><B>Warnings</B></TD><TD ALIGN=LEFT COLSPAN='2'><B>Infos</B></TD></TR>
-<TR ALIGN=LEFT><TD><A HREF_DISABLED='C:/vmware-shared/sandbox/ece453/l3\ece453_top_level.syr'>Synthesis Report</A></TD><TD>Current</TD><TD>Thu Feb 2 17:42:36 2012</TD><TD ALIGN=LEFT>0</TD><TD ALIGN=LEFT><A HREF_DISABLED='C:/vmware-shared/sandbox/ece453/l3\_xmsgs/xst.xmsgs?&DataKey=Warning'>149 Warnings (8 new, 0 filtered)</A></TD><TD ALIGN=LEFT COLSPAN='2'>0</TD></TR>
-<TR ALIGN=LEFT><TD><A HREF_DISABLED='C:/vmware-shared/sandbox/ece453/l3\ece453_top_level.bld'>Translation Report</A></TD><TD>Current</TD><TD>Thu Feb 2 17:42:40 2012</TD><TD ALIGN=LEFT>0</TD><TD ALIGN=LEFT>0</TD><TD ALIGN=LEFT COLSPAN='2'>0</TD></TR>
-<TR ALIGN=LEFT><TD><A HREF_DISABLED='C:/vmware-shared/sandbox/ece453/l3\ece453_top_level_map.mrp'>Map Report</A></TD><TD>Current</TD><TD>Thu Feb 2 17:42:44 2012</TD><TD ALIGN=LEFT>0</TD><TD ALIGN=LEFT><A HREF_DISABLED='C:/vmware-shared/sandbox/ece453/l3\_xmsgs/map.xmsgs?&DataKey=Warning'>147 Warnings (0 new, 0 filtered)</A></TD><TD ALIGN=LEFT COLSPAN='2'><A HREF_DISABLED='C:/vmware-shared/sandbox/ece453/l3\_xmsgs/map.xmsgs?&DataKey=Info'>4 Infos (0 new, 0 filtered)</A></TD></TR>
-<TR ALIGN=LEFT><TD><A HREF_DISABLED='C:/vmware-shared/sandbox/ece453/l3\ece453_top_level.par'>Place and Route Report</A></TD><TD>Current</TD><TD>Thu Feb 2 17:42:52 2012</TD><TD ALIGN=LEFT>0</TD><TD ALIGN=LEFT><A HREF_DISABLED='C:/vmware-shared/sandbox/ece453/l3\_xmsgs/par.xmsgs?&DataKey=Warning'>61 Warnings (0 new, 0 filtered)</A></TD><TD ALIGN=LEFT COLSPAN='2'>0</TD></TR>
+<TR ALIGN=LEFT><TD><A HREF_DISABLED='C:/vmware-shared/sandbox/ece453/l3\ece453_top_level.syr'>Synthesis Report</A></TD><TD>Current</TD><TD>Mon Feb 6 16:59:23 2012</TD><TD ALIGN=LEFT>0</TD><TD ALIGN=LEFT><A HREF_DISABLED='C:/vmware-shared/sandbox/ece453/l3\_xmsgs/xst.xmsgs?&DataKey=Warning'>148 Warnings (0 new, 0 filtered)</A></TD><TD ALIGN=LEFT COLSPAN='2'><A HREF_DISABLED='C:/vmware-shared/sandbox/ece453/l3\_xmsgs/xst.xmsgs?&DataKey=Info'>1 Info (0 new, 0 filtered)</A></TD></TR>
+<TR ALIGN=LEFT><TD><A HREF_DISABLED='C:/vmware-shared/sandbox/ece453/l3\ece453_top_level.bld'>Translation Report</A></TD><TD>Current</TD><TD>Mon Feb 6 16:59:27 2012</TD><TD ALIGN=LEFT>0</TD><TD ALIGN=LEFT>0</TD><TD ALIGN=LEFT COLSPAN='2'>0</TD></TR>
+<TR ALIGN=LEFT><TD><A HREF_DISABLED='C:/vmware-shared/sandbox/ece453/l3\ece453_top_level_map.mrp'>Map Report</A></TD><TD>Current</TD><TD>Mon Feb 6 16:59:31 2012</TD><TD ALIGN=LEFT>0</TD><TD ALIGN=LEFT><A HREF_DISABLED='C:/vmware-shared/sandbox/ece453/l3\_xmsgs/map.xmsgs?&DataKey=Warning'>146 Warnings (0 new, 0 filtered)</A></TD><TD ALIGN=LEFT COLSPAN='2'><A HREF_DISABLED='C:/vmware-shared/sandbox/ece453/l3\_xmsgs/map.xmsgs?&DataKey=Info'>4 Infos (0 new, 0 filtered)</A></TD></TR>
+<TR ALIGN=LEFT><TD><A HREF_DISABLED='C:/vmware-shared/sandbox/ece453/l3\ece453_top_level.par'>Place and Route Report</A></TD><TD>Current</TD><TD>Mon Feb 6 16:59:40 2012</TD><TD ALIGN=LEFT>0</TD><TD ALIGN=LEFT><A HREF_DISABLED='C:/vmware-shared/sandbox/ece453/l3\_xmsgs/par.xmsgs?&DataKey=Warning'>59 Warnings (0 new, 0 filtered)</A></TD><TD ALIGN=LEFT COLSPAN='2'>0</TD></TR>
 <TR ALIGN=LEFT><TD>Power Report</TD><TD>&nbsp;</TD><TD>&nbsp;</TD><TD>&nbsp;</TD><TD>&nbsp;</TD><TD COLSPAN='2'>&nbsp;</TD></TR>
-<TR ALIGN=LEFT><TD><A HREF_DISABLED='C:/vmware-shared/sandbox/ece453/l3\ece453_top_level.twr'>Post-PAR Static Timing Report</A></TD><TD>Current</TD><TD>Thu Feb 2 17:42:55 2012</TD><TD ALIGN=LEFT>0</TD><TD ALIGN=LEFT>0</TD><TD ALIGN=LEFT COLSPAN='2'><A HREF_DISABLED='C:/vmware-shared/sandbox/ece453/l3\_xmsgs/trce.xmsgs?&DataKey=Info'>5 Infos (0 new, 0 filtered)</A></TD></TR>
-<TR ALIGN=LEFT><TD><A HREF_DISABLED='C:/vmware-shared/sandbox/ece453/l3\ece453_top_level.bgn'>Bitgen Report</A></TD><TD>Current</TD><TD>Thu Feb 2 17:43:04 2012</TD><TD ALIGN=LEFT>0</TD><TD ALIGN=LEFT><A HREF_DISABLED='C:/vmware-shared/sandbox/ece453/l3\_xmsgs/bitgen.xmsgs?&DataKey=Warning'>56 Warnings (0 new, 0 filtered)</A></TD><TD ALIGN=LEFT COLSPAN='2'><A HREF_DISABLED='C:/vmware-shared/sandbox/ece453/l3\_xmsgs/bitgen.xmsgs?&DataKey=Info'>1 Info (0 new, 0 filtered)</A></TD></TR>
+<TR ALIGN=LEFT><TD><A HREF_DISABLED='C:/vmware-shared/sandbox/ece453/l3\ece453_top_level.twr'>Post-PAR Static Timing Report</A></TD><TD>Current</TD><TD>Mon Feb 6 16:59:43 2012</TD><TD ALIGN=LEFT>0</TD><TD ALIGN=LEFT>0</TD><TD ALIGN=LEFT COLSPAN='2'><A HREF_DISABLED='C:/vmware-shared/sandbox/ece453/l3\_xmsgs/trce.xmsgs?&DataKey=Info'>5 Infos (0 new, 0 filtered)</A></TD></TR>
+<TR ALIGN=LEFT><TD><A HREF_DISABLED='C:/vmware-shared/sandbox/ece453/l3\ece453_top_level.bgn'>Bitgen Report</A></TD><TD>Current</TD><TD>Mon Feb 6 16:59:54 2012</TD><TD ALIGN=LEFT>0</TD><TD ALIGN=LEFT><A HREF_DISABLED='C:/vmware-shared/sandbox/ece453/l3\_xmsgs/bitgen.xmsgs?&DataKey=Warning'>55 Warnings (0 new, 0 filtered)</A></TD><TD ALIGN=LEFT COLSPAN='2'><A HREF_DISABLED='C:/vmware-shared/sandbox/ece453/l3\_xmsgs/bitgen.xmsgs?&DataKey=Info'>1 Info (0 new, 0 filtered)</A></TD></TR>
 </TABLE>
 &nbsp;<BR><TABLE BORDER CELLSPACING=0 CELLPADDING=3 WIDTH='100%'>
 <TR ALIGN=CENTER BGCOLOR='#99CCFF'><TD ALIGN=CENTER COLSPAN='3'><B>Secondary Reports</B></TD><TD ALIGN=RIGHT WIDTH='10%'COLSPAN=1> <A HREF_DISABLED="?&ExpandedTable=SecondaryReports"><B>[-]</B></a></TD></TR>
 <TR BGCOLOR='#FFFF99'><TD><B>Report Name</B></TD><TD><B>Status</B></TD><TD COLSPAN='2'><B>Generated</B></TD></TR>
-<TR ALIGN=LEFT><TD><A HREF_DISABLED='C:/vmware-shared/sandbox/ece453/l3\usage_statistics_webtalk.html'>WebTalk Report</A></TD><TD>Out of Date</TD><TD COLSPAN='2'>Fri Feb 3 12:27:22 2012</TD></TR>
-<TR ALIGN=LEFT><TD><A HREF_DISABLED='C:/vmware-shared/sandbox/ece453/l3\webtalk.log'>WebTalk Log File</A></TD><TD>Out of Date</TD><TD COLSPAN='2'>Fri Feb 3 12:27:28 2012</TD></TR>
+<TR ALIGN=LEFT><TD><A HREF_DISABLED='C:/vmware-shared/sandbox/ece453/l3\usage_statistics_webtalk.html'>WebTalk Report</A></TD><TD>Current</TD><TD COLSPAN='2'>Mon Feb 6 16:59:54 2012</TD></TR>
+<TR ALIGN=LEFT><TD><A HREF_DISABLED='C:/vmware-shared/sandbox/ece453/l3\webtalk.log'>WebTalk Log File</A></TD><TD>Current</TD><TD COLSPAN='2'>Mon Feb 6 17:00:00 2012</TD></TR>
 </TABLE>
 
 
-<br><center><b>Date Generated:</b> 02/06/2012 - 15:56:53</center>
+<br><center><b>Date Generated:</b> 02/06/2012 - 17:00:01</center>
 </BODY></HTML>
