--- a/l3/ece453_top_level_summary.html
+++ b/l3/ece453_top_level_summary.html
@@ -2,7 +2,7 @@
 <BODY TEXT='#000000' BGCOLOR='#FFFFFF' LINK='#0000EE' VLINK='#551A8B' ALINK='#FF0000'>
 <TABLE BORDER CELLSPACING=0 CELLPADDING=3 WIDTH='100%'>
 <TR ALIGN=CENTER BGCOLOR='#99CCFF'>
-<TD ALIGN=CENTER COLSPAN='4'><B>ece453_top_level Project Status (02/15/2012 - 20:38:37)</B></TD></TR>
+<TD ALIGN=CENTER COLSPAN='4'><B>ece453_top_level Project Status</B></TD></TR>
 <TR ALIGN=LEFT>
 <TD BGCOLOR='#FFFF99'><B>Project File:</B></TD>
 <TD>lab2.xise</TD>
@@ -25,7 +25,7 @@ No Errors</TD>
 <TR ALIGN=LEFT>
 <TD BGCOLOR='#FFFF99'><B>Product Version:</B></TD><TD>ISE 12.4</TD>
 <TD BGCOLOR='#FFFF99'><UL><LI><B>Warnings:</B></LI></UL></TD>
-<TD ALIGN=LEFT><A HREF_DISABLED='C:/vmware-shared/ece453/l3\_xmsgs/*.xmsgs?&DataKey=Warning'>390 Warnings (2 new, 0 filtered)</A></TD>
+<TD ALIGN=LEFT><A HREF_DISABLED='C:/vmware-shared/ece453/l3\_xmsgs/*.xmsgs?&DataKey=Warning'>390 Warnings (2 new)</A></TD>
 </TR>
 <TR ALIGN=LEFT>
 <TD BGCOLOR='#FFFF99'><B>Design Goal:</B></dif></TD>
@@ -161,13 +161,13 @@ System Settings</A>
 <TR ALIGN=CENTER BGCOLOR='#99CCFF'><TD ALIGN=CENTER COLSPAN='6'><B>Detailed Reports</B></TD><TD ALIGN=RIGHT WIDTH='10%'COLSPAN=1> <A HREF_DISABLED="?&ExpandedTable=DetailedReports"><B>[-]</B></a></TD></TR>
 <TR BGCOLOR='#FFFF99'><TD><B>Report Name</B></TD><TD><B>Status</B></TD><TD><B>Generated</B></TD>
 <TD ALIGN=LEFT><B>Errors</B></TD><TD ALIGN=LEFT><B>Warnings</B></TD><TD ALIGN=LEFT COLSPAN='2'><B>Infos</B></TD></TR>
-<TR ALIGN=LEFT><TD><A HREF_DISABLED='C:/vmware-shared/ece453/l3\ece453_top_level.syr'>Synthesis Report</A></TD><TD>Current</TD><TD>Wed Feb 15 20:37:58 2012</TD><TD ALIGN=LEFT>0</TD><TD ALIGN=LEFT><A HREF_DISABLED='C:/vmware-shared/ece453/l3\_xmsgs/xst.xmsgs?&DataKey=Warning'>153 Warnings (0 new, 0 filtered)</A></TD><TD ALIGN=LEFT COLSPAN='2'><A HREF_DISABLED='C:/vmware-shared/ece453/l3\_xmsgs/xst.xmsgs?&DataKey=Info'>1 Info (0 new, 0 filtered)</A></TD></TR>
+<TR ALIGN=LEFT><TD><A HREF_DISABLED='C:/vmware-shared/ece453/l3\ece453_top_level.syr'>Synthesis Report</A></TD><TD>Current</TD><TD>Wed Feb 15 20:37:58 2012</TD><TD ALIGN=LEFT>0</TD><TD ALIGN=LEFT><A HREF_DISABLED='C:/vmware-shared/ece453/l3\_xmsgs/xst.xmsgs?&DataKey=Warning'>153 Warnings (0 new)</A></TD><TD ALIGN=LEFT COLSPAN='2'><A HREF_DISABLED='C:/vmware-shared/ece453/l3\_xmsgs/xst.xmsgs?&DataKey=Info'>1 Info (0 new)</A></TD></TR>
 <TR ALIGN=LEFT><TD><A HREF_DISABLED='C:/vmware-shared/ece453/l3\ece453_top_level.bld'>Translation Report</A></TD><TD>Current</TD><TD>Wed Feb 15 20:38:03 2012</TD><TD ALIGN=LEFT>0</TD><TD ALIGN=LEFT>0</TD><TD ALIGN=LEFT COLSPAN='2'>0</TD></TR>
-<TR ALIGN=LEFT><TD><A HREF_DISABLED='C:/vmware-shared/ece453/l3\ece453_top_level_map.mrp'>Map Report</A></TD><TD>Current</TD><TD>Wed Feb 15 20:38:08 2012</TD><TD ALIGN=LEFT>0</TD><TD ALIGN=LEFT><A HREF_DISABLED='C:/vmware-shared/ece453/l3\_xmsgs/map.xmsgs?&DataKey=Warning'>139 Warnings (0 new, 0 filtered)</A></TD><TD ALIGN=LEFT COLSPAN='2'><A HREF_DISABLED='C:/vmware-shared/ece453/l3\_xmsgs/map.xmsgs?&DataKey=Info'>4 Infos (1 new, 0 filtered)</A></TD></TR>
-<TR ALIGN=LEFT><TD><A HREF_DISABLED='C:/vmware-shared/ece453/l3\ece453_top_level.par'>Place and Route Report</A></TD><TD>Current</TD><TD>Wed Feb 15 20:38:16 2012</TD><TD ALIGN=LEFT>0</TD><TD ALIGN=LEFT><A HREF_DISABLED='C:/vmware-shared/ece453/l3\_xmsgs/par.xmsgs?&DataKey=Warning'>50 Warnings (2 new, 0 filtered)</A></TD><TD ALIGN=LEFT COLSPAN='2'>0</TD></TR>
+<TR ALIGN=LEFT><TD><A HREF_DISABLED='C:/vmware-shared/ece453/l3\ece453_top_level_map.mrp'>Map Report</A></TD><TD>Current</TD><TD>Wed Feb 15 20:38:08 2012</TD><TD ALIGN=LEFT>0</TD><TD ALIGN=LEFT><A HREF_DISABLED='C:/vmware-shared/ece453/l3\_xmsgs/map.xmsgs?&DataKey=Warning'>139 Warnings (0 new)</A></TD><TD ALIGN=LEFT COLSPAN='2'><A HREF_DISABLED='C:/vmware-shared/ece453/l3\_xmsgs/map.xmsgs?&DataKey=Info'>4 Infos (1 new)</A></TD></TR>
+<TR ALIGN=LEFT><TD><A HREF_DISABLED='C:/vmware-shared/ece453/l3\ece453_top_level.par'>Place and Route Report</A></TD><TD>Current</TD><TD>Wed Feb 15 20:38:16 2012</TD><TD ALIGN=LEFT>0</TD><TD ALIGN=LEFT><A HREF_DISABLED='C:/vmware-shared/ece453/l3\_xmsgs/par.xmsgs?&DataKey=Warning'>50 Warnings (2 new)</A></TD><TD ALIGN=LEFT COLSPAN='2'>0</TD></TR>
 <TR ALIGN=LEFT><TD>Power Report</TD><TD>&nbsp;</TD><TD>&nbsp;</TD><TD>&nbsp;</TD><TD>&nbsp;</TD><TD COLSPAN='2'>&nbsp;</TD></TR>
-<TR ALIGN=LEFT><TD><A HREF_DISABLED='C:/vmware-shared/ece453/l3\ece453_top_level.twr'>Post-PAR Static Timing Report</A></TD><TD>Current</TD><TD>Wed Feb 15 20:38:20 2012</TD><TD ALIGN=LEFT>0</TD><TD ALIGN=LEFT>0</TD><TD ALIGN=LEFT COLSPAN='2'><A HREF_DISABLED='C:/vmware-shared/ece453/l3\_xmsgs/trce.xmsgs?&DataKey=Info'>5 Infos (0 new, 0 filtered)</A></TD></TR>
-<TR ALIGN=LEFT><TD><A HREF_DISABLED='C:/vmware-shared/ece453/l3\ece453_top_level.bgn'>Bitgen Report</A></TD><TD>Current</TD><TD>Wed Feb 15 20:38:30 2012</TD><TD ALIGN=LEFT>0</TD><TD ALIGN=LEFT><A HREF_DISABLED='C:/vmware-shared/ece453/l3\_xmsgs/bitgen.xmsgs?&DataKey=Warning'>48 Warnings (0 new, 0 filtered)</A></TD><TD ALIGN=LEFT COLSPAN='2'><A HREF_DISABLED='C:/vmware-shared/ece453/l3\_xmsgs/bitgen.xmsgs?&DataKey=Info'>1 Info (0 new, 0 filtered)</A></TD></TR>
+<TR ALIGN=LEFT><TD><A HREF_DISABLED='C:/vmware-shared/ece453/l3\ece453_top_level.twr'>Post-PAR Static Timing Report</A></TD><TD>Current</TD><TD>Wed Feb 15 20:38:20 2012</TD><TD ALIGN=LEFT>0</TD><TD ALIGN=LEFT>0</TD><TD ALIGN=LEFT COLSPAN='2'><A HREF_DISABLED='C:/vmware-shared/ece453/l3\_xmsgs/trce.xmsgs?&DataKey=Info'>5 Infos (0 new)</A></TD></TR>
+<TR ALIGN=LEFT><TD><A HREF_DISABLED='C:/vmware-shared/ece453/l3\ece453_top_level.bgn'>Bitgen Report</A></TD><TD>Current</TD><TD>Wed Feb 15 20:38:30 2012</TD><TD ALIGN=LEFT>0</TD><TD ALIGN=LEFT><A HREF_DISABLED='C:/vmware-shared/ece453/l3\_xmsgs/bitgen.xmsgs?&DataKey=Warning'>48 Warnings (0 new)</A></TD><TD ALIGN=LEFT COLSPAN='2'><A HREF_DISABLED='C:/vmware-shared/ece453/l3\_xmsgs/bitgen.xmsgs?&DataKey=Info'>1 Info (0 new)</A></TD></TR>
 </TABLE>
 &nbsp;<BR><TABLE BORDER CELLSPACING=0 CELLPADDING=3 WIDTH='100%'>
 <TR ALIGN=CENTER BGCOLOR='#99CCFF'><TD ALIGN=CENTER COLSPAN='3'><B>Secondary Reports</B></TD><TD ALIGN=RIGHT WIDTH='10%'COLSPAN=1> <A HREF_DISABLED="?&ExpandedTable=SecondaryReports"><B>[-]</B></a></TD></TR>
@@ -177,5 +177,5 @@ System Settings</A>
 </TABLE>
 
 
-<br><center><b>Date Generated:</b> 02/15/2012 - 20:38:37</center>
+<br><center><b>Date Generated:</b> 02/20/2012 - 14:44:46</center>
 </BODY></HTML>
